--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-md-whiteframe {
-  background: #fff;
-  margin: 30px;
-  height: 50px;
-  width: 300px;
-  font-family: 'Old Standard TT', serif;
-}
-md-whiteframe span {
-	color: grey;
+span {
+  display: block;
+  width: 20px;
 }
