styling of the btns' spans

--- a/main.less
+++ b/main.less
@@ -1,5 +1,15 @@
-span {
-	display: block;
-	height: 20px;
-	font-size: 10px;
+.md-button {
+	line-height: 20px !important;
+	span {
+		display: block;
+		height: 23px;
+		font-size: 11px;
+		
+	}
+	.num {
+		font-size: 16px;
+	}
+}
+.result {
+	width: 200px;
 }
